[package]
name = "sortnetopt"
version = "0.1.0"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.6.2"
better-panic = "0.1.2"
jemallocator = "0.3.2"
structopt = "0.2.18"
arrayvec = "0.4.11"
indicatif = "0.11.0"
parking_lot = "0.9.0"
rayon = "1.1.0"
crossbeam = "0.7.2"
